--- a/hw2/index.html
+++ b/hw2/index.html
@@ -96,7 +96,8 @@
                     <div class="form-group">
                         <label class="form__label" for="password">Введите пароль: </label>
                         <div class="form-group-icon">
-                            <input class="form__input" id="password" type="password">
+                            <input class="form__input" id="password" type="password" required>
+                            <img src="password.png" alt="">
                         </div>
                     </div>
 
@@ -104,6 +105,7 @@
                         <label class="form__label" for="tel">Введите Ваш телефон: </label>
                         <div class="form-group-icon">
                             <input class="form__input" id="tel" type="tel">
+                            <img src="tel.png" alt="">
                         </div>
                     </div>
 
@@ -276,7 +278,7 @@
                         <input class="form__btn" type="button" value="Оценить">
                     </div>
 
-                    <input type="hidden" value="###">
+                    <input type="hidden" value="Служебная информация">
 
                 </form>
             </div>
