files are distributed in directories

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Домашнее задание №3</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                         <label class="form__label" for="search">Поиск: </label>
                         <div class="form-group-icon">
                             <input class="form__input" id="search" type="search" placeholder="Найди что-нибудь!">
-                            <img src="search.png" alt="">
+                            <img src="assets/images/search.png" alt="">
                         </div>
                     </div>
 
@@ -70,7 +70,7 @@
                         <label class="form__label" for="url">URL: </label>
                         <div class="form-group-icon">
                             <input class="form__input" id="url" type="url" placeholder="https://www.site.com">
-                            <img src="www.png" alt="">
+                            <img src="assets/images/www.png" alt="">
                         </div>
                     </div>
 
@@ -80,7 +80,7 @@
                         <div class="form-group-icon">
                             <input type="text" class="form__input" placeholder="Акакий" name="user-name" id="user-name"
                                 required>
-                            <img src="name.png" alt="">
+                            <img src="assets/images/name.png" alt="">
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                         <div class="form-group-icon">
                             <input type="text" class="form__input" placeholder="Башмачкин" name="user-surname"
                                 id="user-surname" required>
-                            <img src="surname.png" alt="">
+                            <img src="assets/images/surname.png" alt="">
                         </div>
                     </div>
 
@@ -97,7 +97,7 @@
                         <label class="form__label" for="password">Введите пароль: </label>
                         <div class="form-group-icon">
                             <input class="form__input" id="password" type="password" required>
-                            <img src="password.png" alt="">
+                            <img src="assets/images/password.png" alt="">
                         </div>
                     </div>
 
@@ -105,7 +105,7 @@
                         <label class="form__label" for="tel">Введите Ваш телефон: </label>
                         <div class="form-group-icon">
                             <input class="form__input" id="tel" type="tel">
-                            <img src="tel.png" alt="">
+                            <img src="assets/images/tel.png" alt="">
                         </div>
                     </div>
 
@@ -123,7 +123,7 @@
                                 <span style="color: rgb(148, 29, 49);">Женский
                                 </span>
                             </label>
-                            <img src="female.png" alt="">
+                            <img src="assets/images/female.png" alt="">
                         </div>
                     </div>
 
@@ -132,7 +132,7 @@
                         <div class="form-group-icon">
                             <input type="email" name="user-email" id="user-email" class="form__input" required
                                 placeholder="kisa@mail.ru">
-                            <img src="email.png" alt="">
+                            <img src="assets/images/email.png" alt="">
                         </div>
                     </div>
 
@@ -140,7 +140,7 @@
                         <label for="date" class="form__label">Введите дату мероприятия: </label>
                         <div class="form-group-icon">
                             <input type="date" name="date" id="date" required>
-                            <img src="desktop-calendar.png" alt="">
+                            <img src="assets/images/desktop-calendar.png" alt="">
                         </div>
                     </div>
 
@@ -186,7 +186,7 @@
                         <div class="form-group-icon">
                             <input type="number" class="form__number" name="number-users" id="number-users"
                                 required min="1" max="10">
-                            <img src="man.png" class="img-icon" alt="">
+                            <img src="assets/images/man.png" class="img-icon" alt="">
                         </div>
                     </div>
 
@@ -198,7 +198,7 @@
                                 <option value="Обед">Обед</option>
                                 <option value="Ужин">Ужин</option>
                             </select>
-                            <img src="dinner.png" alt="">
+                            <img src="assets/images/dinner.png" alt="">
                         </div>
                     </div>
 
@@ -261,7 +261,7 @@
                     <div class="form-group">
                         <div class="form-group-icon">
                             <input type="color">
-                            <img src="color.png" alt="">
+                            <img src="assets/images/color.png" alt="">
                         </div>
                     </div>
 
